Replace padding var with spacing to fix #79 (#80)
* Replace padding var with spacing to fix #79

* New variable for sides spacing

--- a/src/blocks/media/scss/editor.scss
+++ b/src/blocks/media/scss/editor.scss
@@ -57,8 +57,3 @@
 		transition-property: background-color;
 	}
 }
-
-.novablocks-media .wp-block-group__inner-container {
-	padding-left: var(--novablocks-media-padding);
-	padding-right: var(--novablocks-media-padding);
-}
