--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -24,4 +24,6 @@ $nova-gray: #edf0f1 !default;
 	--bg-master-dark: #000000;
 	--bg-master-light: #FFFFFF;
 	--bg-master-none: transparent;
+
+	--novablocks-sides-spacings: 24px;
 }
